--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,8 @@ channels:
   - conda-forge
   - anaconda
 dependencies:
-  - torchvision
-  - pip
+  - torchvision==0.4.1
+  - jupyter==1.0.0
+  - pip==19.3.1
   - pip:
-      - gym
+      - gym==0.15.3
